[gd_scene load_steps=4 format=3 uid="uid://cf8sc6x5krxb7"]

[ext_resource type="Script" path="res://Scripts/walk_tut.gd" id="1_4y8ty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wufr"]
size = Vector2(82.9268, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vu07"]
size = Vector2(20, 316)

[node name="WalkTut" type="Node2D"]
position = Vector2(-38, 550)
script = ExtResource("1_4y8ty")

[node name="Labels" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Labels"]
offset_left = -5.0
offset_top = 4.0
offset_right = 35.0
offset_bottom = 27.0
text = "W"

[node name="Label2" type="Label" parent="Labels"]
offset_left = 21.0
offset_top = 4.0
offset_right = 61.0
offset_bottom = 27.0
text = "A"

[node name="Label3" type="Label" parent="Labels"]
offset_left = 45.0
offset_top = 4.0
offset_right = 85.0
offset_bottom = 27.0
text = "S"

[node name="Label4" type="Label" parent="Labels"]
offset_left = 68.0
offset_top = 4.0
offset_right = 108.0
offset_bottom = 27.0
text = "D"

[node name="Label5" type="Label" parent="Labels"]
offset_left = 90.0
offset_top = 4.0
offset_right = 154.0
offset_bottom = 27.0
text = "to move"

[node name="Colliders" type="Node2D" parent="."]

[node name="Area2D" type="StaticBody2D" parent="Colliders"]
position = Vector2(70, -150)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Area2D"]
position = Vector2(1, 10)
scale = Vector2(2.46, 2.46)
shape = SubResource("RectangleShape2D_7wufr")

[node name="Area2D2" type="StaticBody2D" parent="Colliders"]
position = Vector2(70, 200)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Area2D2"]
position = Vector2(1, -136)
scale = Vector2(2.46, 2.46)
shape = SubResource("RectangleShape2D_7wufr")

[node name="Area2D3" type="StaticBody2D" parent="Colliders"]
position = Vector2(183.775, 0)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Area2D3"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_4vu07")

[node name="Area2D4" type="StaticBody2D" parent="Colliders"]
position = Vector2(-39.725, 0)
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colliders/Area2D4"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_4vu07")
